[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dblib"
version = "0.0.1"
authors = [
  { name="Xiyao Zhuang", email="xiyao.zhuang1@nhs.net" },
]
description = "A small databricks export package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
