[metadata]
name = dblib
version = 0.0.1
author = Xiyao Zhuang
author_email = xyzhuang3@gmail.com
description = A small Databricks export package
license = MIT License
classifiers = 
    Programming Language :: Python :: 3

[options]
python_requires = >= 3.7
package_dir =
    = src
packages = find:

[options.packages.find]
where = src
